# CompositeQuantization

./: CMakeLists.txt  HOW_TO_INSTALL.txt  HOW_TO_SEARCH.txt  HOW_TO_TRAINING.txt  README.md  README.txt  build_project.bat
ReleaseVersion/: CQParameters.cpp  CQParameters.h  ClosureCluster.cpp  ClosureCluster.h  Cluster.cpp  Cluster.h  ClusterCommon.cpp  ClusterCommon.h  CompositeQuantization.cpp  CompositeQuantization.h  DataUtil.h  Dataset.h  Demo.cpp  Distance.h  Kmeans.cpp  Kmeans.h  NoConstraintCompositeQuantization.cpp  NoConstraintCompositeQuantization.h  PartitioningTree.cpp  PartitioningTree.h  ProductQuantization.cpp  ProductQuantization.h  Searcher.cpp  Searcher.h  config.txt
ReleaseVersion/lbfgslib/: lbfgs.lib
